--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,7 +1,22 @@
 steps:
 
 ########################################################################
-# Faster version uses cached rtl but does synthesis, takes an hour maybe
+# Fastest version uses cached synthesis results, takes ??
+- label: 'tile-array init'
+  agents: { jobsize: "hours" }
+  commands:
+  - 'mflowgen/test/test_module.sh full_chip tile_array
+       --debug
+       --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
+       --steps init'
+
+- wait: ~
+  continue_on_failure: true
+
+
+
+########################################################################
+# Middle version uses cached rtl but does synthesis, takes an hour maybe
 - label: 'tile-array init 60m'
   agents: { jobsize: "hours" }
   commands:
@@ -9,45 +24,31 @@ steps:
        --debug
        --use_cached PE,MemCore,rtl
        --steps syn,init'
-  - pwd
-  - gold=/sim/buildkite-agent/gold.tmp
-  - test -d $$gold || mkdir $$gold
-  - cp -rpf . $$gold
+
+#   - pwd
+#   - gold=/sim/buildkite-agent/gold.tmp
+#   - test -d $$gold || mkdir $$gold
+#   - cp -rpf . $$gold
 
 - wait: ~
   continue_on_failure: true
 
 
 ########################################################################
-# Fastest version uses cached synthesis results, takes ??
-# - label: 'tile-array init'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - 'mflowgen/test/test_module.sh full_chip tile_array
-#        --debug
-#        --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
-#        --steps init'
-# 
-# - wait: ~
-#   continue_on_failure: true
-
-
-
-########################################################################
 # Slowest version builds rtl from scratch, takes 1.5h maybe
-# - label: 'tile-array init 90m'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - steps=init
-#   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
-#   # Try a thing
-#   - 'mflowgen/test/test_module.sh full_chip tile_array
-#        --debug
-#        --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
-#        --steps rtl,syn,init'
-# 
-# - wait: ~
-#   continue_on_failure: true
+- label: 'tile-array init 90m'
+  agents: { jobsize: "hours" }
+  commands:
+  - steps=init
+  # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
+  # Try a thing
+  - 'mflowgen/test/test_module.sh full_chip tile_array
+       --debug
+       --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
+       --steps rtl,syn,init'
+
+- wait: ~
+  continue_on_failure: true
 
 
 
