--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,29 +1,29 @@
 steps:
 
-# - label: 'full_chip 36h'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - 'mflowgen/test/test_module.sh full_chip
-#        --debug
-#        --steps lvs,drc'
-
-
-
-# Okay so cached/stashed tile_array rtl now supposed to happen by default...?
-########################################################################
-# Faster version uses cached rtl but does synthesis, takes an hour maybe
-- label: 'tile-array init 60m'
+- label: 'full_chip 36h'
   agents: { jobsize: "hours" }
   commands:
-  - 'mflowgen/test/test_module.sh full_chip tile_array
+  - 'mflowgen/test/test_module.sh full_chip
        --debug
-       --use_cached PE,MemCore
-       --steps syn,init'
-
-- wait: ~
-  continue_on_failure: true
+       --steps lvs,drc'
 
 
+
+# # Okay so cached/stashed tile_array rtl now supposed to happen by default...?
+# ########################################################################
+# # Faster version uses cached rtl but does synthesis, takes an hour maybe
+# - label: 'tile-array init 60m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
+#        --debug
+#        --use_cached PE,MemCore
+#        --steps syn,init'
+# 
+# - wait: ~
+#   continue_on_failure: true
+# 
+# 
 # ########################################################################
 # # Fastest version uses cached synthesis results, takes ??
 # # - label: 'tile-array init'
