--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,27 +1,29 @@
 steps:
 
 ########################################################################
-# Slowest version builds rtl from scratch, takes 1.5h maybe
-- label: 'tile-array init 90m'
+- label: 'MemCore synth 17m'
   agents: { jobsize: "hours" }
   commands:
-  - steps=init
-  # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
-  # Try a thing
-  - 'mflowgen/test/test_module.sh full_chip tile_array
-       --debug
-       --use_cached MemCore,PE,constraints,rtl,tsmc16,synthesis
-       --steps syn,init'
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
 
 - wait: ~
   continue_on_failure: true
 
 
+########################################################################
+- label: 'PE synth 23m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
 
+- wait: ~
+  continue_on_failure: true
 
 ########################################################################
-# Fastest version uses cached synthesis results, takes ??
-- label: 'tile-array init'
+# tile-array, fastest version, uses cached synthesis results, takes 5 min
+- label: 'tile-array init 5m'
   agents: { jobsize: "hours" }
   commands:
   - 'mflowgen/test/test_module.sh full_chip tile_array
@@ -35,8 +37,8 @@ steps:
 
 
 ########################################################################
-# Middle version uses cached rtl but does synthesis, takes an hour maybe
-- label: 'tile-array init 60m'
+# Middle version uses cached rtl but does synthesis, takes 22 minutes
+- label: 'tile-array init 22m'
   agents: { jobsize: "hours" }
   commands:
   - 'mflowgen/test/test_module.sh full_chip tile_array
@@ -44,52 +46,35 @@ steps:
        --use_cached PE,MemCore,rtl
        --steps syn,init'
 
-#   - pwd
-#   - gold=/sim/buildkite-agent/gold.tmp
-#   - test -d $$gold || mkdir $$gold
-#   - cp -rpf . $$gold
-
 - wait: ~
   continue_on_failure: true
 
 
+# Slowest version does not work (for now) b/c RTL generation is broken.
+# ########################################################################
+# # Slowest version builds rtl from scratch, takes 1.5 hr maybe
+# - label: 'tile-array init 90m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - steps=init
+#   # - $$test --debug full_chip tile_array --steps copy,rtl,syn,init
+#   # Try a thing
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
+#        --debug
+#        --steps syn,init'
+# 
+# - wait: ~
+#   continue_on_failure: true
 
 
 
 
 
 
-
-
-
-- label: 'MemCore synth 17m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-
-- wait: ~
-  continue_on_failure: true
-
-
-- label: 'PE synth 23m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-
-- wait: ~
-  continue_on_failure: true
-
-
-
-
-
-
-
-
-
-
+########################################################################
+########################################################################
+########################################################################
+# Rest, from here down, is TBD
 
 ###########################################################
 # Non-hierarchical version
