--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -5,7 +5,17 @@ steps:
   commands:
   - 'mflowgen/test/test_module.sh full_chip
        --debug
-       --steps lvs,drc'
+       --update_cache /sim/buildkite-agent/gold.$$
+       --steps tile_array,global_controller,dragonphy,glb_top,soc-rtl'
+
+
+
+# - label: 'full_chip 36h'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - 'mflowgen/test/test_module.sh full_chip
+#        --debug
+#        --steps lvs,drc'
 
 
 
