--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,13 +1,17 @@
 steps:
 
-- label: 'full_chip 36h'
-  agents: { jobsize: "hours" }
-  commands:
-  - 'mflowgen/test/test_module.sh full_chip
-       --debug
-       --update_cache /sim/buildkite-agent/gold.$$
-       --steps tile_array,global_controller,dragonphy,glb_top,soc-rtl'
+- label: quick test
+  command: 'echo foo.'$$' bar baz'
 
+
+# - label: 'full_chip 36h'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - 'mflowgen/test/test_module.sh full_chip
+#        --debug
+#        --update_cache /sim/buildkite-agent/gold.$$
+#        --steps tile_array,global_controller,dragonphy,glb_top,soc-rtl'
+# 
 
 
 # - label: 'full_chip 36h'
