--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -2,8 +2,8 @@ steps:
 
 - label: quick test
   commands:
-  - 'echo foo.$$ bar baz || echo ""'
-  - 'echo foo.$$$$ bar baz || echo ""'
+  - 'set foo=bar;
+     echo foo.$$$$ $$foo'
 
 
 # - label: 'full_chip 36h'
@@ -11,7 +11,7 @@ steps:
 #   commands:
 #   - 'mflowgen/test/test_module.sh full_chip
 #        --debug
-#        --update_cache /sim/buildkite-agent/gold.$$
+#        --update_cache /sim/buildkite-agent/gold.$$$$
 #        --steps tile_array,global_controller,dragonphy,glb_top,soc-rtl'
 # 
 
