--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -5,21 +5,19 @@ steps:
 - label: 'full_chip lvs only 20m'
   agents: { jobsize: "hours" }
   commands:
-  - 'set -x; echo
-     $$BUILDKITE_BUILD_NUMBER;
-     echo $$BUILDKITE_BUILD_NUMBER;
-     >
-     /tmp/bk.$$BUILDKITE_BUILD_NUMBER;
-    '
+  - 'mflowgen/test/test_module.sh full_chip
+       --debug
+       --use_cached tile_array,global_controller,dragonphy,glb_top,gen_sram_macro,tsmc16,soc-rtl,rtl,constraints,synopsys-dc-synthesis,cadence-innovus-flowsetup,custom-power-chip,custom-init,io_file,init-fullchip,cadence-innovus-init,cadence-innovus-power,cadence-innovus-place,cadence-innovus-cts,cadence-innovus-postcts_hold,pre-route,cadence-innovus-route,cadence-innovus-postroute,cadence-innovus-postroute_hold,netlist-fixing,sealring,cadence-innovus-signoff,gdsmerge
+       --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
+       --steps lvs'
 
 
-#   - 'mflowgen/test/test_module.sh full_chip
-#        --debug
-#        --use_cached tile_array,global_controller,dragonphy,glb_top,gen_sram_macro,tsmc16,soc-rtl,rtl,constraints,synopsys-dc-synthesis,cadence-innovus-flowsetup,custom-power-chip,custom-init,io_file,init-fullchip,cadence-innovus-init,cadence-innovus-power,cadence-innovus-place,cadence-innovus-cts,cadence-innovus-postcts_hold,pre-route,cadence-innovus-route,cadence-innovus-postroute,cadence-innovus-postroute_hold,netlist-fixing,sealring,cadence-innovus-signoff
-#        --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
-#        --steps merge,lvs'
-
-
+#   - 'set -x; echo
+#      $$BUILDKITE_BUILD_NUMBER;
+#      echo $$BUILDKITE_BUILD_NUMBER
+#      >
+#      /tmp/bk.$$BUILDKITE_BUILD_NUMBER;
+#     '
 
 
 
