--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,25 +1,25 @@
 steps:
 
-########################################################################
-- label: 'MemCore synth 17m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-
-- wait: ~
-  continue_on_failure: true
-
-
-########################################################################
-- label: 'PE synth 23m'
-  agents: { jobsize: "hours" }
-  commands:
-  - test=mflowgen/test/test_module.sh
-  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-
-- wait: ~
-  continue_on_failure: true
+# ########################################################################
+# - label: 'MemCore synth 17m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - test=mflowgen/test/test_module.sh
+#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+# 
+# - wait: ~
+#   continue_on_failure: true
+# 
+# 
+# ########################################################################
+# - label: 'PE synth 23m'
+#   agents: { jobsize: "hours" }
+#   commands:
+#   - test=mflowgen/test/test_module.sh
+#   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+# 
+# - wait: ~
+#   continue_on_failure: true
 
 
 
